--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.18.2",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "multer": "^1.4.4",
-    "pug": "^3.0.2"
+    "multer": "^1.4.4"
   }
 }
