--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "lib": ["dom", "es6"],
     "baseUrl": "./src",
+    "strictNullChecks": true,
     "paths": {
       "@/*": [
         "./*"
