--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
+    "@types/swagger-ui-express": "^4.1.3",
     "intermock": "^0.2.5",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
@@ -31,6 +32,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.1.4",
     "uuid": "^8.3.2"
   }
 }
