--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "lib": ["dom", "es6"],
     "baseUrl": "./src",
     "strictNullChecks": true,
+    "resolveJsonModule": true,
     "paths": {
       "@/*": [
         "./*"
