--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -w",
-    "build-prod": "tsc --project ./"
+    "build:prod": "tsc --project ./"
   },
   "keywords": [
     "backend",
