--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,7 +40,7 @@ jobs:
       run: yarn install
 
     - name: Build
-      run: yarn build-prod
+      run: yarn build:prod
       
     - name: Archive Production Artifact
       uses: actions/upload-artifact@main
@@ -93,4 +93,3 @@ jobs:
           --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
           --platform "managed" \
           --allow-unauthenticated
-          
