--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -92,4 +92,5 @@ jobs:
           --region "$RUN_REGION" \
           --image "gcr.io/$PROJECT_ID/$SERVICE_NAME:$GITHUB_SHA" \
           --platform "managed" \
+          --port 9000 \
           --allow-unauthenticated
