--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,7 +65,7 @@ jobs:
       
     - name: Create env file
       run: |
-        echo $ENV_FILE > .env
+        echo $ENV_FILE | base64 --decode > .env
 
     - name: Setup GCloud Auth
       id: auth
