--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -66,6 +66,7 @@ jobs:
     - name: Create env file
       run: |
         echo $ENV_FILE | base64 --decode > .env
+        cat .env
 
     - name: Setup GCloud Auth
       id: auth
