--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -80,6 +80,7 @@ jobs:
     - name: Create env file
       run: |
         ls -la ./
+        cat .env
 
     # Build and push image to Google Container Registry
     - name: Build & Push
