--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,6 +36,11 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         
+    - name: Create env file
+      run: |
+        echo $ENV_FILE | base64 --decode > .env
+        cat .env
+
     - name: Install dependencies
       run: yarn install
 
