--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,10 +6,10 @@ name: PHA Backend
 on:
   push:
     branches:
-      - 'workflow'
+      - 'master'
   pull_request:
     branches:
-      - 'workflow'
+      - 'master'
 
 env:
   PROJECT_ID: ${{ secrets.GCR_PROJECT }}
@@ -42,37 +42,19 @@ jobs:
     - name: Build
       run: yarn build:prod
       
-    - name: Archive Production Artifact
-      uses: actions/upload-artifact@main
-      with:
-        name: dist
-        path: dist
-
-    - name: Create env file
-      run: |
-        echo $ENV_FILE | base64 --decode > .env
-        cat .env
-
-
   deploy-gcr:
     name: Deploy to GCR
     needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Download Artifact
-      uses: actions/download-artifact@main
-      with:
-        name: dist
-        path: dist
-
     - name: Create env file
       run: |
         echo $ENV_FILE | base64 --decode > .env
-        cat .env
 
     - name: Setup GCloud Auth
       id: auth
