--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@google-cloud/storage": "^5.18.2",
     "ajv": "^8.11.0",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "multer": "^1.4.4",
