--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.3",
     "multer": "^1.4.4",
     "swagger-ui-express": "^4.1.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.6.0"
   }
 }
