--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/json2csv": "^5.0.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.23",
     "@types/swagger-ui-express": "^4.1.3",
@@ -33,6 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "json2csv": "^5.0.7",
     "multer": "^1.4.4",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^8.3.2",
