--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.18.2",
     "ajv": "^8.11.0",
+    "archiver": "^5.3.1",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
