--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.3",
     "json2csv": "^5.0.7",
     "multer": "^1.4.4",
+    "node-cron": "^3.0.0",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^8.3.2",
     "winston": "^3.6.0"
